--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@
 .pub/
 /build/
 
+#Firebase related
+android/app/src/google-services.json
+
 # Web related
 lib/generated_plugin_registrant.dart
 
