--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.0.4
   uuid: ^2.0.4
   flushbar: ^1.10.4
   soundpool: ^1.1.0
   flutter_tts: ^1.2.0
-
+  cloud_firestore: ^0.13.6
+  flutter_bloc: ^4.0.0
+  equatable: ^1.2.0
+  flutter_speed_dial: ^1.2.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
